--- a/css/css.css
+++ b/css/css.css
@@ -8,7 +8,9 @@ body{
 /*basic reset*/
 * {margin: 0; padding: 0;}
  
- 
+ input:focus{
+    outline: transparent;
+}
 /*form styles*/
 #msform {
     width: 100%;
@@ -33,15 +35,14 @@ width: 70%;
 width: 30%;
 }
 #msform .containers .container-form .form{
- width: 499px;
-height: 391px;
+    width: 499px;
+    height: 391px;
     background: #FFFFFF;
     border-radius: 16px;
     padding: 43px 50px;
     margin: auto;
     /* left: -165px; */
     position: absolute;
-    box-shadow: 0px 1px 0px 1px #f7f4f482;
     right: 10%;
     top: 26%;
 }
@@ -81,10 +82,20 @@ line-height: 19px;
 color: #222222;
 opacity: 0.6;
 }
+.paso{
+    margin-bottom: 30px !important;
+}
+.paso-13{
+    margin-bottom: 20px !important;
+}
+.search{
+    margin: 17px 0px;
+}
+
 .search label{
     position: absolute;
     left: 65px;
-    top: 49%;
+    top: 54%;
 }
 .search .input-search{
     width: 100%;
@@ -104,7 +115,7 @@ opacity: 0.6;
     border: 1px solid #000000 !important;
     width: 144px;
     background-color: white;
-    right: 33%;
+    right: 34%;
 }
 .next{
         width: 215px;
@@ -147,7 +158,7 @@ color: #000000;
     border-radius: 16px;
     height: 56px;
     font-size: 18px;
-    bottom: 37%;    
+    bottom: 34%;    
 }
 
 /*headings*/
@@ -214,6 +225,557 @@ color: #000000;
   color: white;
 }
 
+/*===============     SECTION 2    ======================*/
+#msform .containers .container-form .form-2 {
+width: 499px;
+height: 473px;
+background: #FFFFFF;
+border-radius: 16px;
+padding: 43px 50px;
+margin: auto;
+position: absolute;
+right: 10%;
+top: 26%;
+}
+.inputs {
+margin-bottom: 15px;
+margin-top: 36px;
+}
+.inputs input,.inputs-2 input{
+height: 48px;
+border: 1px solid #F3F3F3;
+box-sizing: border-box;
+padding: 0px 11px;
+}
+.inputs-2{
+margin-bottom: 35px;
+}
+
+#section-2 .action-button{
+bottom: 27%;
+}
+/*===============     SECTION 3    ======================*/
+#msform .containers .container-form .form-3{
+width: 499px;
+height: 784px;
+background: #FFFFFF;
+border-radius: 16px;
+padding: 43px 50px;
+margin: auto;
+position: absolute;
+right: 10%;
+top: 6%;
+}
+.inputs-3{
+margin:35px 0px;
+}
+.inputs-3 input{
+display: block;
+width: 100%;
+height: 48px;
+padding: .375rem .75rem;
+margin-bottom: 15px;
+font-size: 1rem;
+font-weight: 400;
+line-height: 1.5;
+color: #495057;
+background-color: #fff;
+background-clip: padding-box;
+border: 1px solid #ced4da;
+border-radius: .25rem;
+transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.inputs-3 .label-active {
+position: absolute;
+padding: 13px;
+right: 11%;
+}
+.inputs-3 .active{
+border: 1px solid #BDCC31;
+}
+#section-3 .action-button{
+bottom:15%;
+}
+/*===============     SECTION 4    ======================*/
+#msform .containers .container-form .form-4{
+width: 499px;
+height: 456px;
+background: #FFFFFF;
+border-radius: 16px;
+padding: 43px 50px;
+margin: auto;
+position: absolute;
+right: 10%;
+top: 30%;
+}
+.buttons-numer{
+width: 85%;
+margin: 25px 0px;
+overflow: auto;
+}
+.buttons-numer button{
+width: 50px;
+height: 48px;
+color: #000000;
+background-color: #FFFFFF !important;
+border: 1px solid #F3F3F3;
+box-sizing: border-box;
+border-radius: 8px !important;
+margin-right: 20px;
+}
+.buttons-numer .button-active{
+border: 1px solid #BDCC31;
+}
+#section-4 .action-button{
+bottom: 23%;
+}
+/*===============     SECTION 5    ======================*/
+#msform .containers .container-form .form-5{
+width: 499px;
+height: 668px;
+background: #FFFFFF;
+border-radius: 16px;
+padding: 43px 50px;
+margin: auto;
+position: absolute;
+right: 10%;
+top: 14%;
+} 
+.option-contrato{
+margin: 30px 0px;
+}          
+.option-contrato ul li{
+width: 379px;
+background: #FFFFFF;
+padding: 11px 14px 13px;
+border: 1px solid #F3F3F3;
+box-sizing: border-box;
+border-radius: 8px;
+margin-bottom: 20px;
+text-align: initial;
+font-weight: normal;
+font-size: 14px;
+line-height: 27px;
+color: #000000;
+opacity: 0.4;
+}
+.option-contrato ul .is-active {
+background-color: #ffffff !important;
+color: #000000 !important;
+border: 1px solid #b3c12e;
+font-weight: 500;
+background: url(../img/svg/check.svg);
+background-position: right;
+background-repeat: no-repeat;
+background-origin: content-box;
+opacity: inherit;
+}
+#section-5 .action-button {
+bottom: 18%;
+}
+/*===============     SECTION 9    ======================*/       
+#msform .containers .container-form .form-9{
+width: 503px;
+height: 597px;
+background: #FFFFFF;
+border-radius: 16px;
+padding: 43px 50px;
+margin: auto;
+position: absolute;
+right: 10%;
+top: 14%;
+}
+.option-posicion{
+margin: 30px 0px;
+}          
+.option-posicion ul li{
+width: 379px;
+background: #FFFFFF;
+padding: 11px 14px 13px;
+border: 1px solid #F3F3F3;
+box-sizing: border-box;
+border-radius: 8px;
+margin-bottom: 20px;
+text-align: initial;
+font-weight: normal;
+font-size: 14px;
+line-height: 27px;
+color: #000000;
+opacity: 0.4;
+}
+.option-posicion ul li p{
+  width: 300px;
+}
+.option-posicion ul .is-active {
+background-color: #ffffff !important;
+color: #000000 !important;
+border: 1px solid #b3c12e;
+font-weight: 500;
+background: url(../img/svg/check.svg);
+background-position: right;
+background-repeat: no-repeat;
+background-origin: content-box;
+opacity: inherit;
+}
+.option-posicion ul li p{
+  opacity: 0.6;
+}
+#section-9 .action-button {
+bottom: 24%;
+}
+/*===============     SECTION 11     ======================*/
+#msform .containers .container-form .form-11{
+width: 499px;
+height: 599px;
+background: #FFFFFF;
+border-radius: 16px;
+padding: 43px 50px;
+margin: auto;
+position: absolute;
+right: 10%;
+top: 14%;
+}  
+.option-calefaccion{
+margin: 30px 0px;
+}          
+.option-calefaccion ul li a{
+width: 379px;
+height: 48px;
+background: #FFFFFF;
+padding: 11px 14px 13px;
+border: 1px solid #F3F3F3;
+box-sizing: border-box;
+border-radius: 8px;
+margin-bottom: 20px;
+text-align: initial;
+font-weight: normal;
+font-size: 14px;
+line-height: 27px;
+color: #000000;
+opacity: 0.4;
+}
+.option-calefaccion ul .active {
+background-color: #ffffff !important;
+color: #000000 !important;
+border: 1px solid #b3c12e;
+font-weight: 500;
+background: url(../img/svg/check.svg);
+background-position: right;
+background-repeat: no-repeat;
+background-origin: content-box;
+opacity: inherit;
+}
+#section-11 .action-button {
+bottom: 26%;
+}
+/*===============     SECTION 12     ======================*/
+#msform .containers .container-form .form-12{
+width: 499px;
+height: 700px;
+background: #FFFFFF;
+border-radius: 16px;
+padding: 43px 50px;
+margin: auto;
+position: absolute;
+right: 10%;
+top: 8%;
+}  
+/*===============     SECTION 13     ======================*/
+#msform .containers .container-form .form-13{
+width: 499px;
+height: 750px;
+background: #FFFFFF;
+border-radius: 16px;
+padding: 43px 50px;
+margin: auto;
+position: absolute;
+right: 10%;
+top: 6%;
+}
+.option-position{
+margin:25px 0px;
+}
+.option-position ul li a,.option-position ul li p{
+font-weight: normal;
+font-size: 14px;
+line-height: 27px;
+color: #222222;
+opacity: 0.4;
+width: 286px;
+}
+.option-position ul li{
+width: 379px;
+height: 110px;
+background: #FFFFFF;
+border: 1px solid #F3F3F3;
+color: #222222;
+box-sizing: border-box;
+border-radius: 8px;
+margin-bottom: 20px;
+text-align: initial;
+padding: 16px
+}
+.option-position ul .is-active {
+background-color: #ffffff !important;
+color: #000000 !important;
+border: 1px solid #b3c12e;
+font-weight: 500;
+background: url(img/svg/check.svg);
+background-position: right;
+background-repeat: no-repeat;
+background-origin: content-box;
+}
+.option-position ul .is-active a{
+font-weight: 500;
+font-size: 14px;
+line-height: 27px;
+color: #222222;
+opacity: initial;
+}
+.option-position ul .is-active p{
+opacity: 0.6;
+}
+#section-13 .action-button {
+bottom: 15%;
+}
+/*===============     SECTION 14     ======================*/
+#msform .containers .container-form .form-14{
+width: 499px;
+height: 650px;
+background: #FFFFFF;
+border-radius: 16px;
+padding: 43px 50px;
+margin: auto;
+position: absolute;
+right: 10%;
+top: 14%;
+}
+.options-caracteristicas{
+margin: 40px 0px;
+}
+.options-caracteristicas ul li {
+color: #f3f3f3;
+width: 179px;
+height: 48px;
+background: #FFFFFF;
+padding: 11px 14px 13px;
+border: 1px solid #F3F3F3;
+color: #222222;
+box-sizing: border-box;
+border-radius: 8px;
+margin-bottom: 20px;
+text-align: initial;
+margin-right: 18px;
+}
+.options-caracteristicas ul li a{
+color: #222222;
+opacity: 0.4;
+}
+.options-caracteristicas ul li button:focus{
+outline: transparent;
+}
+.options-caracteristicas ul li .entrar{
+display: none;
+width: 139px;
+margin-top: 17px;
+}
+.options-caracteristicas ul li .entrar input{
+background: #FFFFFF;
+padding: 11px 14px 13px;
+border: 1px solid #F3F3F3;
+color: #222222;
+box-sizing: border-box;
+border-radius: 8px;
+margin-bottom: 20px;
+text-align: initial;
+width: 100%;
+}
+.options-caracteristicas .is-active3 .entrar{
+display: block;
+}
+.options-caracteristicas .is-active{
+background-color: #ffffff !important;
+color: #000000 !important;
+border: 1px solid #b3c12e;
+font-weight: 500;
+background: url(../img/svg/check.svg);
+background-position: right;
+background-repeat: no-repeat;
+background-origin: content-box;
+}
+.options-caracteristicas .is-active a,.options-caracteristicas .is-active3 a{
+color: #000000 !important;
+opacity: 1;
+}
+.options-caracteristicas .is-active3{
+background-color: #ffffff !important;
+color: #000000 !important;
+border: 1px solid #b3c12e;
+font-weight: 500;
+background: url(img/svg/check.svg);
+background-position: right;
+background-repeat: no-repeat;
+background-origin: content-box;
+background-position-y: top;
+}
+.options-caracteristicas .is-active3{
+height: 116px;
+}
+#section-14 .action-button {
+bottom:20%;
+}
+/*===============     SECTION 15     ======================*/
+
+#msform .containers .container-form .form-15{
+width: 499px;
+height: 650px;
+background: #FFFFFF;
+border-radius: 16px;
+padding: 43px 50px;
+margin: auto;
+position: absolute;
+right: 10%;
+top: 14%;
+}
+.option-inputs{
+margin: 30px 0px;
+}
+.option-inputs ul li a{
+width: 179px;
+height: 48px;
+background: #FFFFFF;
+padding: 11px 14px 13px;
+border: 1px solid #F3F3F3;
+color: #222222;
+box-sizing: border-box;
+border-radius: 8px;
+margin-bottom: 20px;
+text-align: initial;
+margin-right: 18px
+}
+.option-inputs ul li .active {
+background-color: #ffffff !important;
+color: #000000 !important;
+border: 1px solid #b3c12e;
+font-weight: 500;
+background: url(../img/svg/check.svg);
+background-position: right;
+background-repeat: no-repeat;
+background-origin: content-box;
+}
+.option-inputs-2{
+margin: 30px 0px;
+}
+.option-inputs-2 ul li a{
+width: 379px;
+height: 48px;
+background: #FFFFFF;
+padding: 11px 14px 13px;
+border: 1px solid #F3F3F3;
+color: #222222;
+box-sizing: border-box;
+border-radius: 8px;
+margin-bottom: 20px;
+text-align: initial;
+margin-right: 18px
+}
+.option-inputs-2 ul li .active {
+background-color: #ffffff !important;
+color: #000000 !important;
+border: 1px solid #b3c12e;
+font-weight: 500;
+background: url(../img/svg/check.svg);
+background-position: right;
+background-repeat: no-repeat;
+background-origin: content-box;
+}
+#section-15 .action-button {
+bottom: 19%;
+}
+/*===============     SECTION 16      ======================*/        
+
+
+#msform .containers .container-form .form-16{
+width: 499px;
+height: 633px;
+background: #FFFFFF;
+border-radius: 16px;
+padding: 43px 50px;
+margin: auto;
+position: absolute;
+right: 10%;
+top: 14%;
+}
+.cono-viflip{
+margin: 35px 0px;
+}
+.cono-viflip li a{
+width: 379px;
+height: 48px;
+background: #FFFFFF;
+border: 1px solid #F3F3F3;
+color: #222222;
+box-sizing: border-box;
+border-radius: 8px;
+margin-bottom: 20px;
+text-align: initial;
+
+}
+.cono-viflip ul li .active {
+background-color: #ffffff !important;
+color: #000000 !important;
+border: 1px solid #b3c12e;
+font-weight: 500;
+background: url(img/svg/check.svg);
+background-position: right;
+background-repeat: no-repeat;
+background-origin: content-box;
+}
+#section-16 .action-button {
+bottom: 20%;
+}
+
+/*===============     SECTION 17      ======================*/
+#msform .containers .container-form .form-17{
+width: 499px;
+height: 628px;
+background: #FFFFFF;
+border-radius: 16px;
+padding: 43px 50px;
+margin: auto;
+position: absolute;
+right: 10%;
+top: 11%;
+}
+.oferta-inputs{
+margin: 40px 0px;
+}
+.oferta-inputs input{
+display: block;
+width: 100%;
+height: 48px;
+padding: .375rem .75rem;
+margin: 20px 0px;
+font-size: 1rem;
+font-weight: 400;
+line-height: 1.5;
+color: #495057;
+background-color: #fff;
+background-clip: padding-box;
+border: 1px solid #F3F3F3;
+border-radius: 8px;
+transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+#section-17 .action-button{
+right: 14%;
+bottom: 24%;
+width: 379px;
+height: 56px;
+}
+
+
+
+        /*==============================   MEDIA  ==============================*/
 @media (min-width: 4096px){
 .men{
       left: 15%;
@@ -334,36 +896,99 @@ color: #000000;
 }
 }
 @media (max-width: 360px) {
-   #msform .containers .container-form{
-  width: 1px;
- }
-#msform .containers .container-img {
+  /*====== MEDIA FIELDSET 1 =====*/
+    #msform .containers .container-form{
+    width: 1px;
+    }
+    #msform .containers .container-img {
     width: 100%;
-}
-.men {
+    }
+    .men {
     left: 9%;
-}
-#msform .containers .container-form .form {
+    }
+    #msform .containers .container-form .form {
     right: 15px;
     width: 93%;
     padding: 43px 25px;
-  }
+    }
 
-  .search label {
+    .search label {
     left: 43px;
-  }
-  .previous {
+    }
+    .previous {
     width: 110px;
     right: 60%;
-}
-.next {
+    }
+    .next {
     width: 151px;
     right: 11%;
-}
-.men .acti h1{
+    }
+    .men .acti h1{
     font-size: 41px;
     }
     .men .acti img {
     top: -2px;
+    }
+ /*====== MEDIA FIELDSET 2 =====*/
+
+     #msform .containers .container-form .form-2 {
+    right: 15px;
+    width: 93%;
+    padding: 43px 25px;
+    height: 600px;
+    }
+    .inputs input,.inputs-2 input{
+      width: 100% !important;
+      margin-bottom: 15px;
+    }
+    #section-2 .action-button {
+    bottom: 10%;
+    }
+ /*====== MEDIA FIELDSET 3 =====*/    
+      #msform .containers .container-form .form-3 {
+    right: 15px;
+    width: 93%;
+    top: 27%;
+    padding: 43px 25px;
+   height: 680px;
+    }
+
+    #section-3 .action-button {
+    bottom: 1%;
+    }
+ /*====== MEDIA FIELDSET 4 =====*/    
+      #msform .containers .container-form .form-4 {
+    right: 15px;
+    width: 93%;
+    top: 27%;
+    padding: 43px 25px;
+    height: 460px;
+    }
+
+    #section-4 .action-button {
+    bottom: 1%;
+    }
+ /*====== MEDIA FIELDSET 5 =====*/    
+      #msform .containers .container-form .form-5 {
+    right: 15px;
+    width: 93%;
+    top: 27%;
+    padding: 43px 25px;
+    height: 460px;
+    }        
+}
+@media (min-height: 560px) {
+    .fondo{
+      height: 900px !important;
+    }
+
+    .section-1 .action-button{
+         bottom: 11% !important;
+    }
+    #section-2 .action-button {
+        bottom: -30%;
+    }
+    #section-3 .action-button {
+    bottom: -44%;
 }
 }
